Uploaded image for project: 'Apache Arrow'
  1. Apache Arrow
  2. ARROW-1150

[C++] AdaptiveIntBuilder compiler warning on MSVC

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • None
    • 0.5.0
    • C++
    • None

    Description

      See build https://ci.appveyor.com/project/ApacheSoftwareFoundation/parquet-cpp/build/1.0.166/job/6tlq1nxvcwe02dxk

          array.cc
          buffer.cc
          builder.cc
      C:\Program Files (x86)\Microsoft Visual Studio 14.0\VC\include\algorithm(959): error C2220: warning treated as error - no 'object' file generated [C:\projects\parquet-cpp\build\arrow_ep-prefix\src\arrow_ep-build\arrow_objlib.vcxproj] [C:\projects\parquet-cpp\build\arrow_ep.vcxproj]
      C:\Program Files (x86)\Microsoft Visual Studio 14.0\VC\include\algorithm(959): warning C4996: 'std::transform::_Unchecked_iterators::_Deprecate': Call to 'std::transform' with parameters that may be unsafe - this call relies on the caller to check that the passed values are correct. To disable this warning, use -D_SCL_SECURE_NO_WARNINGS. See documentation on how to use Visual C++ 'Checked Iterators' [C:\projects\parquet-cpp\build\arrow_ep-prefix\src\arrow_ep-build\arrow_objlib.vcxproj] [C:\projects\parquet-cpp\build\arrow_ep.vcxproj]
          C:\Program Files (x86)\Microsoft Visual Studio 14.0\VC\include\algorithm(959): note: see declaration of 'std::transform::_Unchecked_iterators::_Deprecate'
          C:\projects\parquet-cpp\build\arrow_ep-prefix\src\arrow_ep\cpp\src\arrow\builder.cc(347): note: see reference to function template instantiation '_OutIt *std::transform<const int64_t*,int8_t*,arrow::AdaptiveIntBuilder::Append::<lambda_81eb08b2ba1ad73602f9436bd880d934>>(_InIt,_InIt,_OutIt,_Fn1)' being compiled
                  with
                  [
                      _OutIt=int8_t *,
                      _InIt=const int64_t *,
                      _Fn1=arrow::AdaptiveIntBuilder::Append::<lambda_81eb08b2ba1ad73602f9436bd880d934>
                  ]
      

      Attachments

        Activity

          People

            uwe Uwe Korn
            wesm Wes McKinney
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: