ARROW-1150: Silence AdaptiveIntBuilder compiler warning on MSVC

We need to explicitly mark those sections as safe.

Author: Uwe L. Korn <uwelk@xhochy.com>

Closes #834 from xhochy/ARROW-1150 and squashes the following commits:

a03df6c [Uwe L. Korn] ARROW-1150: Silence AdaptiveIntBuilder compiler warning on MSVC